getComputedStyle for background shorthand property does not return background-origin and background-clip. https://bugs.webkit.org/show_bug.cgi?id=86155

Patch by Joe Thomas <joethomas@motorola.com> on 2012-06-01
Reviewed by Tony Chang.

Added background-origin and background-clip CSS Property values to the background shorthand CSSValueList.

Source/WebCore:

* css/CSSComputedStyleDeclaration.cpp:
(WebCore::CSSComputedStyleDeclaration::getBackgroundShorthandValue):

LayoutTests:

* fast/backgrounds/background-shorthand-with-backgroundSize-style-expected.txt:
* fast/backgrounds/background-shorthand-with-backgroundSize-style.html:
* fast/css/getComputedStyle/getComputedStyle-background-shorthand-expected.txt:
* fast/css/getComputedStyle/getComputedStyle-background-shorthand.html:

Canonical link: https://commits.webkit.org/105937@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@119259 268f45cc-cd09-0410-ab3c-d52691b4dbfc